2015-06-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Commom.pm (open_out): Add parameter which 
	conditionalizes the calls to "binmode" on file handle.
	* tp/Texinfo/Convert/Info.pm (_open_info_file): New function,
	wrapping Texinfo::Common::open_out.  Call 
	Texinfo::Common::open_out so that it calls "binmode".
	(output): Call _open_info_file instead of open_out directly.

2015-06-16  Karl Berry  <karl@freefriends.org>

	* texindex/tests/ti-helpversion: new test, in new subdir, with
	fingers crossed.
	* texindex/Makefile.am (TESTS): new variable setting.
	(EXTRA_DIST): include $(TESTS).

2015-06-15  Eli Zaretskii  <eliz@gnu.org>, and
            Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (open_out): Run "binmode" on file handle, 
	to disable conversion of LF to CR LF under MS-Windows.

2015-06-14  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.tex (\tcfont, \etcfont): new macros.
	(\ecfont): call \etcfont now, so we can equally support tc* with ec*.
	(\latonechardefs) <a2,a4,a5,a6>,
	(\utfeightchardefs) <00A2,00A4,00A5,00A6>: can now support
	characters cents, currency, yen, broken bar (among others from
	the LaTeX TS1 encoding, but we'll leave it at that for now).

2015-06-13  Karl Berry  <karl@freefriends.org>

	* info/t/Init-test.inc: set -x so the t/*.log files have
	more tracing in case of debugging.

2015-06-11  Karl Berry  <karl@freefriends.org>

	* tp/Texinfo/Convert/UnFilled.pm (_add_text),
	* tp/Texinfo/Convert/Plaintext.pm (_contents):
        avoid negative repeat counts, which cause a warning in perl 5.22.0.

2015-06-10  Karl Berry  <karl@freefriends.org>

	* doc/refcard/txicmdcheck (read_refcard): \escape all the {
	due to new warning in perl 5.22.0.  Also \escape the }
	for consistency.

2015-06-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_virtual_index): Change type of a local 
	variable to match expected type of argument to next_index_match.
	* info/dir.c (dir_entry_of_infodir),